add threshold UI
